// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppIconComment [snapshot] should render the "IconCommentWithCounter" component correctly 1`] = `
<span
  class="flex text-neutral"
>
  <anonymous-stub
    path="[object Object]"
    size="base"
  />
  <span
    class="ml-2"
  >
    10
  </span>
</span>
`;

exports[`AppIconComment [snapshot] should render the "JustIconComment" component correctly 1`] = `
<span
  class="flex text-neutral"
>
  <anonymous-stub
    path="[object Object]"
    size="base"
  />
  <!--v-if-->
</span>
`;
